# limit_orderbook_py

./: .gitignore  DECISIONS.md  README.md  pyproject.toml
.github/workflows/: test.yml
docs/: DECISIONS.md
src/: analytics.py  custom_types.py  depth_chart.py  execution_schedules.py  files_manager.py  filled_order.py  heaps.py  levels.py  main.py  order.py  order_execution.py  order_generator.py  orderbook.py  orders_queue.py  price_levels.py  saver.py  visuals.py
src/bookkeeping/: custom_types.py  exceptions.py  files_manager.py  saver.py
src/lob/: main.py
src/lob/bookkeeping/: custom_types.py  exceptions.py  settings.py
src/lob/orderbook/: book_side.py  modify_order.py  order_execution.py  orderbook.py  orders_queue.py
src/lob/orders/: factory.py  order.py  (+1 more)
src/orderbook/: book_side.py  order_execution.py  orderbook.py  orders_queue.py  price_levels.py
src/orders/: factory.py  filled_order.py  order.py  order_generator.py  order_id_generator.py
src/simulation/: orders_generator.py  scenario.py  simulation.py
src/visuals/: depth_chart.py  visuals.py
test/: helper.py  test_analytics.py  test_book_sides.py  test_factory.py  test_order.py  test_order_execution.py  test_order_id_generator.py  test_orderbook.py  test_orderbook_levels.py  test_orders_queue.py  test_saver.py
test/integration/: test_modify_order.py  test_order_execution.py  test_orderbook.py
test/unit/: test_book_sides.py  test_factory.py  test_modify_order.py  test_order.py  test_order_execution.py  test_order_id_generator.py  test_orderbook.py  test_orders_queue.py  test_saver.py
(+14 files in other folders)
