[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "lob"
version = "0.1.0"
description = "A correctness-first limit order book engine in Python."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib",
    "sortedcontainers",
]

[project.optional-dependencies]
test = ["pytest"]

[tool.setuptools.packages.find]
where = ["src"]
